# confidant.ai

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  RELEASE_GUIDE.md  SUMMARY.md  build-release-apk.sh  build.gradle.kts  gradle.properties  settings.gradle.kts  setup_llama_cpp.sh
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/confidant/ai/: NotesIntegrationTest.kt  PersonalizationIntegrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp  llama-wrapper.cpp
app/src/main/java/com/confidant/ai/: ConfidantApplication.kt  MainActivity.kt
app/src/main/java/com/confidant/ai/analytics/: BatteryAnalyticsTracker.kt
app/src/main/java/com/confidant/ai/conversation/: ConfirmationManager.kt  ConversationStateManager.kt  ParameterCollector.kt  ToolExecutionState.kt
app/src/main/java/com/confidant/ai/data/: PreferencesManager.kt
app/src/main/java/com/confidant/ai/database/: AppDatabase.kt  Converters.kt
app/src/main/java/com/confidant/ai/database/dao/: BatteryMetricsDao.kt  DaoInterfaces.kt  FeedbackDao.kt  IntegrationConfigDao.kt  LearningMetricDao.kt  NoteDao.kt  ProactiveMessageDao.kt  SleepSessionDao.kt  ToolExecutionLogDao.kt  UserProfileDao.kt
app/src/main/java/com/confidant/ai/database/entity/: BatteryMetricsEntity.kt  Entities.kt  FeedbackEntity.kt  LearningMetricEntity.kt  NoteEntity.kt  NoteFtsEntity.kt  SleepSessionEntity.kt  UserProfileEntity.kt
app/src/main/java/com/confidant/ai/engine/: DynamicTokenAllocator.kt  LLMEngine.kt  StreamingCallback.kt
app/src/main/java/com/confidant/ai/integrations/: DuckDuckGoSearchTool.kt  EnhancedFunctionCallingSystem.kt  FunctionCallingSystem.kt  IntelligentSearchManager.kt  IntelligentToolManager.kt  NewsSearchTool.kt  NotesTool.kt  NotificationSearchTool.kt  QueryPreprocessor.kt  SearchCache.kt  UnifiedToolSystem.kt  WeatherTool.kt  WebContentFetcher.kt
app/src/main/java/com/confidant/ai/memory/: SimplifiedMemorySystem.kt
app/src/main/java/com/confidant/ai/model/: ModelDownloadManager.kt
app/src/main/java/com/confidant/ai/notes/: NotesManager.kt  ProactiveNoteRetrieval.kt  SmartNoteRetrieval.kt
app/src/main/java/com/confidant/ai/notifications/: NotificationChannelManager.kt
app/src/main/java/com/confidant/ai/oem/: OEMOptimizationHelper.kt
app/src/main/java/com/confidant/ai/onboarding/: OnboardingMessageManager.kt
app/src/main/java/com/confidant/ai/personalization/: InterestOptimizer.kt  PersonalizationManager.kt
app/src/main/java/com/confidant/ai/power/: WakeLockManager.kt
app/src/main/java/com/confidant/ai/proactive/: ActiveChatDetector.kt  NotificationDeduplicator.kt  NotificationFormatter.kt  SimplifiedProactiveMessaging.kt  SimplifiedProactiveSystem.kt
app/src/main/java/com/confidant/ai/prompts/: ChatMLFormatter.kt  LFM2Prompts.kt  OptimizedPrompts.kt
app/src/main/java/com/confidant/ai/response/: CitationManager.kt  EnhancedResponseFormatter.kt  ResponseQualityManager.kt
app/src/main/java/com/confidant/ai/scheduler/: IntelligenceScheduler.kt
app/src/main/java/com/confidant/ai/search/: BM25Search.kt  EnhancedKeywordSearch.kt
app/src/main/java/com/confidant/ai/service/: BootReceiver.kt  ConfidantBackgroundService.kt  ForegroundServiceTimeoutManager.kt  ForegroundServiceTimeoutReceiver.kt  HeartbeatReceiver.kt  NotificationCaptureService.kt  ServiceControlReceiver.kt  ServiceHealthMonitor.kt  ServiceHeartbeatManager.kt  ServiceRestartReceiver.kt  ServiceRestartWorker.kt  SleepModeHandler.kt  ThermalMonitoringService.kt
app/src/main/java/com/confidant/ai/setup/: OnboardingScreen.kt  OnboardingScreens.kt  SetupScreen.kt
app/src/main/java/com/confidant/ai/sleep/: SleepManager.kt
app/src/main/java/com/confidant/ai/system/: LogLevel.kt  ServerControlManager.kt  ServerManager.kt  SystemMonitor.kt
app/src/main/java/com/confidant/ai/telegram/: PersonalizedTelegramManager.kt  StandardizedMessages.kt  StreamingResponseManager.kt  TelegramBotManager.kt  TelegramFormatter.kt  TelegramMessageEditor.kt  TelegramRateLimiter.kt
app/src/main/java/com/confidant/ai/testing/: ManualTestRunner.kt
app/src/main/java/com/confidant/ai/thermal/: ThermalManager.kt
app/src/main/java/com/confidant/ai/ui/components/: ConfidantLogo.kt  EmptyStates.kt  ExplainerDialogs.kt
app/src/main/java/com/confidant/ai/ui/screens/: DashboardScreenRedesigned.kt  DataViewerScreen.kt  IntegrationsScreen.kt  LogsScreen.kt  MemoryScreen.kt  SettingsScreenRedesigned.kt  TestingScreen.kt  ThermalScreen.kt
app/src/main/java/com/confidant/ai/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/confidant/ai/ui/viewmodels/: DashboardViewModel.kt
app/src/main/java/com/confidant/ai/utils/: DateTimeProvider.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml  ic_splash.xml  ic_thermal.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors_redesigned.xml  strings.xml  themes_redesigned.xml
app/src/test/java/com/confidant/ai/: ConversationFlowTest.kt  EndToEndTest.kt  IntegratedResponseTest.kt  IntelligentToolCallingTest.kt  IntentDetectionTest.kt  ModelDownloadTest.kt  NotesSystemTest.kt  PersonalizedQueryTest.kt  RealTimeProactiveTest.kt  SmartNoteRetrievalTest.kt
docs/: README.md  demo.css  demo.js  index.html
